<resources>
    <string name="app_name">Gallery</string>
    <string name="button_addGallery">Add Gallery</string>
    <string name="hint_galleryTitle">Artist Name</string>
    <string name="hint_galleryAge">Age </string>
    <string name="hint_galleryOrigin">Place of Birth </string>
    <string name="hint_galleryStyle">Style </string>
    <string name="hint_galleryArtefact">Most Famous Work of Art </string>
    <string name="hint_galleryAlive">Is the Artist Alive?</string>
    <string name="menu_addGallery">Add</string>
    <string name="menu_cancelGallery">Cancel</string>
    <string name="enter_gallery_name"> Please enter a Gallery Name </string>
    <string name="save_gallery"> Save Gallery </string>
    <string name="button_addImage"> Add Image </string>
    <string name="select_gallery_image">Select Artist image</string>
    <string name="change_gallery_image">Change Artist image</string>
    <string name="button_location">Set Location</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="menu_deleteGallery">Delete</string>
    <string name="title_activity_gallery_maps">Map of All Artists</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="textview">Name</string>
    <string name="textview2">Age</string>

    <string name="welcome_message">Welcome to the Gallery App</string>
    <string name="welcome_text">Keep a list of your favourite artists</string>
    <string name="ok">ok</string>

</resources>
